<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.0.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>net.cartola.emissorfiscal</groupId>
	<artifactId>emissor-fiscal</artifactId>
	<packaging>jar</packaging>
	<version>0.1</version>
	<name>emissor-fiscal</name>
	<description>Projeto de emissao de documentos fiscais</description>

	<properties>
<!-- 		<appengine.maven.plugin.version>2.2.0</appengine.maven.plugin.version> -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
	</properties>
	
	<!-- Dependencias ESPECIFICAS de perfis, (passar o arg: -Pnome_perfil) quando tiver "empacotando" etc -->
	<!-- PS: Esse perfil de "producao", NÃO tem nenhuma relação com o perfil do SPRING -->
	<profiles>
		<profile>
			<id>producao</id>
			
			<dependencies>
				<!-- Excluindo o TOMCAT EMBARCADO -->
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-web</artifactId>
					<exclusions>
						<exclusion>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-starter-tomcat</artifactId>
						</exclusion>
					</exclusions>
				</dependency>

				<!-- CLOUD -->
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter</artifactId>
				</dependency>
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
				</dependency>
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter-trace</artifactId>
				</dependency>
				
			</dependencies>
		</profile>
		<profile>
			<id>computeengine</id>
			
			<dependencies>
				<!-- Excluindo o TOMCAT EMBARCADO -->
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-web</artifactId>
				</dependency>

				<!-- CLOUD -->
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter</artifactId>
				</dependency>
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
				</dependency>
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-gcp-starter-trace</artifactId>
				</dependency>
				
			</dependencies>
		</profile>
		
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.36</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
<!-- 			<exclusions> -->
<!-- 				<exclusion> -->
<!-- 					<groupId>org.springframework.boot</groupId> -->
<!-- 					<artifactId>spring-boot-starter-logging</artifactId> -->
<!-- 				</exclusion> -->
<!-- 			</exclusions> -->
		</dependency>
		
		<!-- Atualizando o Log4J, que foi excluido acima, para a versão abaixo -->
<!-- 		<dependency> -->
<!-- 		    <groupId>org.apache.logging.log4j</groupId> -->
<!-- 		    <artifactId>log4j-api</artifactId> -->
<!-- 		    <version>2.17.1</version> -->
<!-- 	  	</dependency> -->
<!-- 	  	<dependency> -->
<!-- 		    <groupId>org.apache.logging.log4j</groupId> -->
<!-- 		    <artifactId>log4j-core</artifactId> -->
<!-- 		    <version>2.17.1</version> -->
<!-- 		</dependency> -->
		
        <!-- https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java -->
        <dependency>
            <groupId>com.sendgrid</groupId>
            <artifactId>sendgrid-java</artifactId>
        </dependency>

		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
		<!-- https://github.com/thymeleaf/thymeleaf-extras-springsecurity -->
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.0</version>
		</dependency>
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		
		<!-- Para trabalhar com os arquivos do SPED -->
		<dependency>
			<groupId>com.github.jean-merelis</groupId>
			<artifactId>coffeepot-bean-wr</artifactId>
			<version>1.3.0-rc.3</version>
			<scope>compile</scope>
		</dependency>

<!-- 		<dependency> -->
<!-- 			<groupId>com.ancientprogramming.fixedformat4j</groupId> -->
<!-- 			<artifactId>fixedformat4j</artifactId> -->
<!-- 			<version>1.2.2</version> -->
<!-- 		</dependency> -->

		<!-- Testes -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<!-- https://github.com/bonigarcia/webdrivermanager/ -->
		<!-- https://stackoverflow.com/questions/50566186/can-we-add-drivers-in-selenium-as-maven-depandancies/50587347#50587347 -->
		<!-- Para NÃO precisar de BAIXAR os webdrivers.exe dos navegadores no PC -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>3.7.1</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
<!-- 		    <version>3.141.59</version> -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility-proxy</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<!-- Usado para identificar as properties que criarmos  -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
                  <groupId>com.google.cloud.tools</groupId>
                  <artifactId>appengine-maven-plugin</artifactId>
<!-- 				<version>${appengine.maven.plugin.version}</version> -->
                  <version>1.3.1</version>
				<configuration>
					<version>1</version>
<!-- 					<deploy.projectId>emissor-fiscal</deploy.projectId> -->
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
